--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.6-pre4
-yarn_mappings=1.21.6-pre4+build.1
-loader_version=0.16.14
-loom_version=1.10-SNAPSHOT
+minecraft_version=1.21.7
+yarn_mappings=1.21.7+build.8
+loader_version=0.17.2
+loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.8.2+1.21.6
+mod_version=1.8.2+1.21.7
 maven_group=pw.smto
 archives_base_name=moretools
 
 # Dependencies
-fabric_version=0.126.1+1.21.6
-polymer_version = 0.13.0-pre.1+1.21.6-pre2
+fabric_version=0.129.0+1.21.7
+polymer_version = 0.13.6+1.21.7
